--- a/body.tex
+++ b/body.tex
@@ -1,25 +1,59 @@
-% !TeX root = cover_main.tex
+% !TeX root = cover.tex
 
 % I am writing to express interest in the Cryptography Researcher position at \company. With my strong background in cryptography coupled with my ability to perform high-quality research, I am confident my skills
-I am writing to express interest in the Cryptography Researcher position at \company. With my strong background in cryptography coupled, capacity to perform high-quality research, and problem-solving abilities, I am confident my skills
+I am writing to express interest in the \position position at \company, as advertised on your website. With my strong background in cryptography, capacity to perform high-quality research, and problem-solving skills, I am eager to contribute to your team and support 
+\companys goals of 
+% building the first cryptographic computer.
+solving challenging problems through cryptography.
+% building secure, decentralized digital asset management systems.
 
-and support 
-the mission of \company
-your mission to 
-I am eager to contribute
-and advance
-\company' goal of XXX
+% minimizing the potential harm of MEV for Ethereum-based blockchains.
+% and support 
+% the mission of \company
+% your mission to 
+% I am eager to contribute to 
+% % and advance
+% \company' goal of of developing
 
-Currently, I am nearing completion of my PhD in Computer Science from the University at Buffalo, where I specialized in secure multi-party computation (SMC) and its applications. Throughout my PhD, I have worked on a variety of different projects under the scope of classical protocol design, prototyping, and implementation, alongside developing new methodologies for evaluating information disclosure from arbitrary secure function evaluation.
-My research in this space has resulted in several publications in top security conferences and recognition 
-% in the form of awards for my work.
-for my work.
+Currently, I am nearing completion of my PhD in Computer Science from the University at Buffalo, where I specialize in secure multi-party computation (SMC) and its applications. Throughout my PhD, I have worked on a variety of projects ranging from classical protocol construction (design, prototyping, and implementation), to developing novel methodologies for quantifying information disclosure from arbitrary secure function evaluations. 
+My research in this space has resulted in several publications in top security conferences and awards for my work. 
 
-Beyond my central focus of SMC, I have interfaced with a number of other subsets of cryptography throughout research, including private-set intersection, zero-knowledge proofs, and differential privacy.
+Beyond my central focus of SMC, I have interfaced with other branches of cryptography through my research, including differential privacy, input certification, and zero-knowledge proofs. Additionally, I previously conducted research on blockchain applications in healthcare, where our group proposed one of the first smart contract-based remote patient monitoring systems.
 
-The mission of \company to XXX is highly attractive. 
+My prior experience with blockchain, coupled with my expertise in cryptography drew me to \companys mission of 
+utilizing cutting-edge cryptographic techniques to solve problems with practical significance.
+% solving 
+% bridging the gap between  and customer-facing applications.
+% providing secure and scalable solutions for digital assets,
+% My prior experience drew me to \companys mission of integrating cryptography at a fundamental level into next-generation technologies.
+% mitigating the negative consequences of MEV, 
+% This presents the opportunity to a broad range of opportunities to develop cutting-edge cryptographic solutions. 
+% Your work 
+% Specifically,
+% due to the broad range of opportunities to develop cutting-edge cryptographic solutions. Specifically, 
+% the secret sharing component of the Lock-Keeper system 
+% your work on verifiable secret sharing 
+% your work on multi-party computation and multi-signature schemes 
+This philosophy directly aligns with my background in designing and implementing performant SMC protocols for end-user deployment.
+To this end, my work as the primary maintainer of our group's large-scale open-source SMC compiler facilitated my growth as both a developer and researcher.
+In parallel with optimizing existing solutions and writing new protocol implementations, I also mentor and advise my team members working on the compiler.
+This project honed my skills in software engineering, collaboration, and problem-solving, while demonstrating my ability to efficiently deliver high-quality work and lead others.
+% gained valuable experience developing and maintaining software 
+% through my work on our group's large-scale open-source SMC compiler.
 
+% Furthermore, I am actively part of an ongoing project for building frameworks for secure computation with certified inputs. This carries direct applications in blockchain-based applications by enforcing correctness and accountability across computational participants.
 
-I appreciate and thank you for considering my application. I am eager about the prospect of contributing my cryptography expertise to \company and furthering (the goal of XXX).
-I look forward to the opportunity to meet and discuss the position in more detail. Please feel free to contact me at \myphone or \myemail. 
+% My responsibilities include  
+% research on accountability in multi-party computation is directly related to an ongoing project 
+% the research problem of guaranteeing cryptographic privacy for searchers is attractive since it  for deployment in untrusted environments.
+% ,  and interest in building privacy enhancing technologies.
+
+I appreciate and thank you for considering my application. 
+I look forward to the opportunity to discuss how my cryptography expertise and skills align with those of \company.
+% about the prospect of contributing my cryptography expertise to \company and furthering (the goal of XXX).
+% I look forward to the opportunity to meet and discuss the position in more detail. 
+Please feel free to contact me at \myphone or \myemail. 
 % Thank you for your time.
+
+
+% I want to be able to leverage my epxerience in secure multi-party computation to solve real-world problems in the crytpo space.
