--- a/resume.tex
+++ b/resume.tex
@@ -59,7 +59,6 @@
     \vspace{-4pt}\scshape\raggedright\large
 }{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
 
-% Ensure that generate pdf is machine readable/ATS parsable
 \pdfgentounicode=1
 
 %-------------------------
@@ -122,7 +121,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Alessandro Baccarini} \\ \vspace{1pt}
-    \small \href{tel:19148863901}{\faicon{phone} +1 914 886 3901}  
+    \href{tel:19148863901}{\faicon{phone} +1 914 886 3901}  
     $|$
     \href{mailto:abaccarini@proton.me}{{\faicon{inbox} abaccarini@proton.me}} 
     $|$
@@ -184,8 +183,8 @@
 }
 \resumeItemListStart
 \resumeItem{Core maintainer of \emph{PICCO}, a source-to-source compiler used to translate general-purpose programs into their secure implementations for deployment in a distributed setting.}
-\resumeItem{Integrated novel techniques o}
-\resumeItem{Extensively optimized existing protocol implementations, while simultaneously performing a large-scale refactor in order to support future maintainability and extensibility.}
+% \resumeItem{Integrated novel technique~ }
+\resumeItem{Extensively optimized existing protocol implementations, while simultaneously performing a large-scale refactor to support future maintainability and extensibility.}
 % \resumeItem{Integrated replicated secret sharing framework into the compiler.}
 % \resumeItem{Mentored undergraduate student on network-level optimizations.}
 \resumeItemListEnd
@@ -203,7 +202,7 @@
 {Graduate Research Assistant}{Fordham University}{Aug. 2017 -- May 2019}
 {Blockchain Applications in Healthcare}{}{}
 \resumeItemListStart
-\resumeItem{Led the design on one of the earliest frameworks that fused blockchain and healthcare together into an IoT remote patient monitoring system based on the Ethereum protocol.}
+\resumeItem{Led the design on one of the earliest frameworks that fused blockchain and healthcare into an IoT remote patient monitoring system based on the Ethereum protocol.}
 \resumeItem{Assisted in prototype smart contract development in Solidity to support real-time automated monitoring.}
 \resumeItemListEnd
 
@@ -224,7 +223,8 @@
 \resumeProjectHeading
 {\textbf{Refereed Journals}}{}
 \resumeItemListStart
-\resumeItem{\textbf{A. Baccarini}, M. Blanton, S. Zou,  ``Understanding Information Disclosure from Secure Computation Output: A Comprehensive Study of Average Salary Computation.''  \emph{ACM Transactions on Privacy and Security (TOPS)}, to appear.}
+% \resumeItem{\textbf{A. Baccarini}, M. Blanton, S. Zou,  ``Understanding Information Disclosure from Secure Computation Output: A Comprehensive Study of Average Salary Computation.''  \emph{ACM Transactions on Privacy and Security (TOPS)}, to appear.}
+\resumeItem{\textbf{A. Baccarini}, M. Blanton, S. Zou,  ``Understanding Information Disclosure from Secure Computation Output: A Comprehensive Study of Average Salary Computation.'' \href{https://dl.acm.org/journal/tops}{\emph{ACM Transactions on Privacy and Security (TOPS)}}, to appear.}
 \resumeItem{A. Alhayajneh, \textbf{A. Baccarini}, G.M. Weiss, T. Hayajneh, A.  Farajidavar,   ``Biometric Authentication and Verification for Medical Cyber Physical Systems.'' \href{https://www.mdpi.com/2079-9292/7/12/436}{\emph{Electronics}, 7(12), 436. 2018.}}
 \resumeItem{K.N. Griggs, O. Ossipova, C.P. Kohlios, \textbf{A. Baccarini}, E.A. Howson, T. Hayajneh, ``Healthcare Blockchain System Using Smart Contracts for Secure Automated Remote Patient Monitoring.'' \href{https://link.springer.com/article/10.1007/s10916-018-0982-x}{\emph{J Med Syst}, 42: 130. 2018.} }
 \resumeItemListEnd
@@ -238,7 +238,7 @@
 \section{Technical Skills}
 \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-          \textbf{Cryptographic Techniques}{: secure multi-party computation, secret sharing, differential privacy, private set intersection} \\
+          \textbf{Cryptographic}{: secure multi-party computation, secret sharing, differential privacy, private set intersection} \\
           \textbf{Languages}{: C/C++, Python, Bash, Lua, \LaTeX} \\
           \textbf{Developer Tools}{: Git, SVN, Neovim, VS Code } \\
           \textbf{Libraries}{: GNU MP and MPFR, OpenSSL, NumPy, SciPy, Matplotlib, TensorFlow}
