--- a/cover.tex
+++ b/cover.tex
@@ -6,18 +6,22 @@
 \usepackage{eso-pic}
 \usepackage{charter}
 \usepackage{marvosym}
-
+\usepackage{xspace}
 \usepackage{color,hyperref}
 \definecolor{darkblue}{rgb}{0.0,0.0,0.8}
 \hypersetup{colorlinks,breaklinks,linkcolor=darkblue,urlcolor=darkblue,anchorcolor=darkblue,citecolor=darkblue}
 
+\urlstyle{same}
 \usepackage{fontawesome}
 \usepackage{latexsym}
 \usepackage{fancyhdr}
 \usepackage{inconsolata}
 \usepackage[english]{babel}
 \usepackage{tabularx}
- 
+
+% used to make it easier to copy-paste into text boxes 
+% \usepackage[none]{hyphenat}
+
 \addtolength{\topmargin}{-0.5in}
 \addtolength{\textheight}{1.0in}
 \definecolor{gr}{RGB}{225,225,225}
@@ -61,7 +65,6 @@
 % \city, \state\ \zip\\
 
 \vspace{-0.1in}\greeting\ \recipient,\\
-
 % Body
 \vspace{-0.1in}\setlength\parindent{24pt}
 \noindent\input{body}
