--- a/info.tex
+++ b/info.tex
@@ -1,5 +1,5 @@
 
-% !TeX root = cover_main.tex
+% !TeX root = cover.tex
 
 
 % Edit the following
@@ -7,16 +7,20 @@
 % Personal information
 \newcommand{\myname}{Alessandro Baccarini} % Your name (e.g. "John Smith")
 \newcommand{\mytitle}{} % Your title (e.g. "Applicant")
-\newcommand{\myemail}{abaccarini@proton.me} % Your email (e.g. "me@mydomain.com")
-\newcommand{\mylinkedin}{alessandro-baccarini} % Your LinkedIn profile name (e.g. "myname")
-\newcommand{\myphone}{+1 914 886 3901 } % Your phone number (e.g. "123.456.7890")
+\newcommand{\myemail}{abaccarini@proton.me} 
+\newcommand{\mylinkedin}{alessandro-baccarini} 
+\newcommand{\myphone}{+1 914 886 3901 } 
 
-\newcommand{\recipient}{Hiring Manager} % The recipient (e.g. "Hiring Manager")
-\newcommand{\greeting}{Dear} % The greeting to use (e.g. "Dear")
-\newcommand{\closer}{Sincerely} % The closer to use (e.g. "Kind Regards")
+% \newcommand{\recipient}{Hiring Manager\xspace} % The recipient (e.g. "Hiring Manager")
+\newcommand{\recipient}{Recruiting Manager\xspace} 
+\newcommand{\greeting}{Dear\xspace} 
+\newcommand{\closer}{Sincerely\xspace} 
 
 % Company information
-\newcommand{\company}{Flashbots} % The company (e.g. "Microsoft Corporation")
+\newcommand{\company}{Pluto\xspace} % The company (e.g. "Microsoft Corporation")
+\newcommand{\companys}{\company's\xspace} % The company (e.g. "Microsoft Corporation")
+% \newcommand{\companys}{\company's\xspace} % The company (e.g. "Microsoft Corporation")
+\newcommand{\position}{Applied Cryptographer\xspace} % The company (e.g. "Microsoft Corporation")
 \newcommand{\street}{} % The company's street address (e.g. "1 Microsoft Way")
 \newcommand{\city}{} % The company's city (e.g. "Redmond")
 \newcommand{\state}{} % The company's state prefix (e.g. "WA")
